Tue Dec 16 16:57:49 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/projection/QuadricProjection.java: Make
	getLocalQuadric() more robust.  Middle points were added to try
	to avoid hyperbolic surfaces, they are now also added when linear
	system is singular.

Mon Dec 15 16:49:57 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/projection/QuadricProjection.java: When
	QuadricProjection is used from SmoothNodes3D, projected vertices may
	be moved very far from the real surface if local surface is an
	hyperbolic surface.  In order to prevent large deformations,
	projection is invalidated in such a case.
	But this situation should be handled gracefully by SmoothNodes3DBg,
	so QuadricProjection constructor has a new argument to enable these
	checks if needed.  They are now disabled by default.
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3DBg.java: Fix return
	value of smoothNode() when MeshLiaison.move() returns false.
	* src/org/jcae/mesh/amibe/projection/MeshLiaison.java: In move(),
	exit condition was missing and projection was always considered as
	being invalid.

Tue Dec  9 12:27:54 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/validation/QualityProcedureFactory.java:
	New class.

Thu Dec  4 20:47:46 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Modify constructor
	to allow decoupling minimal and maximal edge length.

Mon Nov 24 11:27:21 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/projection/Sphere.java: New class to
	generate a regular mesh on a sphere.  This geometry will be
	needed to test surface projection.

Thu Nov 20 16:55:29 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/projection/MeshLiaison.java: New class to
	start work on remeshing.  MeshLiaison takes a background mesh as