@@ -4,6 +4,10 @@ Tue Dec 16 16:57:49 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
 	getLocalQuadric() more robust.  Middle points were added to try
 	to avoid hyperbolic surfaces, they are now also added when linear
 	system is singular.
+	* src/org/jcae/mesh/amibe/projection/MeshLiaison.java: Fix return
+	value of move() when a loop is detected.  This does not imply that
+	projection fails, but that approximation is not accurate enough.
+	In these cases, vertex is moved, thus true is returned.
 
 Mon Dec 15 16:49:57 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
 
